sass/stylesheets/sass/screen.scss
/* ... */
// Analog Clock
.clock {
	padding: 0 10px;
	height: 99%;
	width: auto;
}

.clock-svg {
	max-height: 100%;
	max-width: 100%;
	display: block;
	margin: 0 auto;
}

.time-zone {
	margin: 0 0 .5em 0;
	white-space: nowrap;
}

.local-clock {
	margin: .5em 0 0 0;
	white-space: nowrap;
}

.clock-face {
	fill: $clock-face-color;
}

.clock-hand {
	fill: $clock-hand-color;
}

.clock-hand-sec {
	fill: $clock-hand-sec-color;
}

.clock-lines {
	fill: $clock-lines-color;
}

.sysmap {
	height: 100%;
	width: auto;
	padding: 0 10px;
	text-align: center;
}

.sysmap-widget-container {
	overflow: hidden;
	height: 100%;
	width: 100%;
	max-height: 100%;
	max-width: 100%;
}

.navtree {
	$max_depth: 10;

	@keyframes fadein {
		from {opacity: 0;}
		to   {opacity: 1;}
	}
	@-moz-keyframes fadein {
		from {opacity: 0;}
		to   {opacity: 1;}
	}
	@-webkit-keyframes fadein {
		from {opacity: 0;}
		to   {opacity: 1;}
	}
	@-ms-keyframes fadein {
		from {opacity: 0;}
		to   {opacity: 1;}
	}
	@-o-keyframes fadein {
		from {opacity: 0;}
		to   {opacity: 1;}
	}

	.tree {
		width: 100%;
		height: 100%;

		.tree-list {
			list-style: none;
		}

		.tree-list.root > .tree-item > .tree-row > .content > .margin-lvl {
			flex: 0 0 15px;
		}

		.tree-list > .tree-item.ui-sortable-helper .content {
			padding-left: 5px;
		}

		@for $i from 0 through $max_depth {
			.tree-list[data-depth="#{$i}"] > .tree-item {
				&> .tree-row > .content > .margin-lvl {
					flex: 0 0 ($i * 15px + 10px);
				}
				&.ui-sortable-helper {
					margin-left: ($i * 15px + 10px);

					& > .tree-row > .content > .margin-lvl {
						display: none;
					}
				}
			}
		}

		.tree-list[data-depth] .ui-sortable-helper {
			> .tree-row > .content > .margin-lvl {
				flex: 0 0 15px;
			}

			@for $i from 1 through $max_depth - 1 {
				$class_tree_list: '.tree-list';
				@for $j from 1 through $i {
					@if $j != 1 {
						$class_tree_list: $class_tree_list + ' .tree-list';
					}
				}
				#{$class_tree_list} > li > .tree-row > .content > .margin-lvl {
					flex: 0 0 ($i * 15px + 15px);
				}
			}
		}

		.tree-item {
			> .tree-row {
				width: 100%;
				min-width: 320px;
				border-bottom: 1px solid $ui-border-color;
				padding: 8px 0;

				&:hover {
					background-color: $ui-hover-color;
				}

				> .problems {
					float: right;
					position: relative;
					padding-left:10px;
					margin-right: 10px;
					background: inherit;
					display: flex;

					.problems-per-item {
						flex: 0 0 7px;
						background: gray;
						color: $white;
						padding: 3px 4px 2px;
						font-size: 12px;
						line-height: 1;
						border-radius: 3px;
						margin: 0px 5px 0px 0px;
					}
				}

				> .tools {
					float: right;
					position: relative;
					padding-left:10px;
					margin-right: 10px;
					display: flex;
					width: 85px;

					.edit-item-btn,
					.remove-item-btn,
					.import-items-btn,
					.add-child-btn {
						margin-left: 5px;
						cursor: pointer;
						border: 0px none;
						opacity: 0.5;
						float: left;
					}
					.edit-item-btn:hover,
					.remove-item-btn:hover,
					.import-items-btn:hover,
					.add-child-btn:hover {
						opacity: 1;
					}
					.add-child-btn {
						background: url(../img/icon-sprite.svg) no-repeat -47px -551px;
						background-color: $transparent !important;
						height: 15px;
						width: 14px;
					}
					.edit-item-btn {
						background: url(../img/icon-sprite.svg) no-repeat -47px -478px;
						background-color: $transparent !important;
						height: 15px;
						width: 14px;
					}
					.import-items-btn {
						background: url(../img/icon-sprite.svg) no-repeat -47px -515px;
						background-color: $transparent !important;
						height: 15px;
						width: 14px;
					}
					.remove-btn {
						position: relative;
						margin-left: 10px;
						top: 0px;
					}
				}

				> .content {
					display: flex;
					height: 20px;

					> .arrow {
						flex: 0 0 15px;
						text-align: center;
						margin: 2px 2px 0px -5px;

						> .treeview {
							display: none;
						}
					}

					> .drag-icon {
						min-width: 24px;
						cursor: move;
					}

					> .item-name {
						flex: 0 1 auto;
						white-space: nowrap;
						overflow: hidden;
						margin-right: 5px;
						text-overflow: ellipsis;
						line-height: 1.5;
					}
				}
			}

			&.is-parent {
				> .tree-row{
					> .content {
						> .arrow {
							> .treeview {
								display: block;
							}
						}
					}
				}
			}

			&.selected {
				> .tree-row {
					@extend %found-bg;

					&:hover {
						@extend %found-bg;
					}
				}
			}

			&.no-map,
			&.inaccessible {
				> .tree-row {
					> .content {
						> .item-name {
							color: $form-border-color;
						}
					}
				}
			}

			&.ui-sortable-helper {
				background: #f7f7f7;
				border-color: #d7dadc;
				border-width: 1px;
				border-style: solid;

				.tools {
					display: none;
				}
			}

			&.sortable-error {
				border-color: transparent;
				background: #fbe3e4;
			}

			&.opened > ul {
				display: block;
			}

			&.closed > ul {
				display: none;
			}
		}

		.highliglted-parent > .tree-row {
			background: #f9f9f9;
		}

		.sortable-item-placeholder {
			background: #f5f5f5;
			height: 33px;
		}

		.placeholder {
			background-color: #ebeef0;
			-webkit-animation: fadein .5s;
			-moz-animation: fadein .5s;
			-ms-animation: fadein .5s;
			-o-animation: fadein .5s;
			animation: fadein .5s;
		}

		.drop-hover > .row {
			background: #faebd7;
		}
	}
}
/* ... */

