..F....... [ZBXNEXT-2102] fixed widget scaling on Safari

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -4570,6 +4570,9 @@ tr.cursor-move {
 	width: 100%;
 	max-height: 100%;
 	max-width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .navtree {
